--- a/style/style.css
+++ b/style/style.css
@@ -196,7 +196,193 @@
   
 }
 
-@media only screen and (min-width: 768px) and (max-width:1023px){}
+@media only screen and (min-width: 768px) and (max-width:1023px){
+  *{
+    margin: 0px;
+    padding: 0px;
+  }
+  
+  button,a,h1,h2,h3,ul,li,p{
+    font-family: GT America Regular, sans-serif;
+  }
+  li{
+    display: inline;
+    text-decoration: underline;
+    padding-right: 5px;
+  }
+  .image-background{
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  /*======================================HEADER*/
+
+  button{
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+  }
+
+  .menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: antiquewhite;
+  }
+
+  .bx-menu,.bx-x{
+    font-size: 80px;
+  }
+
+  .menu-content{
+    display: none;
+    background-color: antiquewhite;
+    padding-right: 20px;
+  }
+
+  .button-close{
+    display: none;
+    margin-right: 80px;
+  }
+
+  .button-open{
+    position: fixed;
+  }
+
+  /*==================================SOBRE MI*/
+  .about-me{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+  .me-img{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    width: 250px;  
+    border-radius: 20%;
+  }
+
+  .text-animated{
+    margin-top: 25px;
+    display: inline-block;
+    background-color: antiquewhite;
+    border-radius: 10px;
+  }
+
+  .my-name{
+    display: flex;
+    justify-content: center;
+  }
+
+  .my-role{
+    padding: 10px;
+    margin-top: 15px;
+    overflow: hidden;
+    border-right: 1px solid antiquewhite ;
+    white-space: nowrap;
+    font-size: 36px;
+    width: 0;
+    animation:  typing 2.5s steps(50, end) forwards,
+                blink .8s infinite;
+  }
+
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 88% }
+  }
+
+  @keyframes blink {
+    from { border-color: transparent }
+    to { border-color: black; }
+  }
+
+  .about-me-text{
+    text-align: justify;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+  }
+
+  /*=================================CERTIFICADOS*/
+  .background{
+    background-color: antiquewhite;
+    margin-top: 50px;
+    border-radius: 10px;
+    width: 100%;
+  }
+
+  .certificates{
+    padding-top: 25px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .certificate-img{
+    padding-top: 10px;
+    width: 40%;
+  }
+
+  /*=================================PROYECTOS*/
+  .proyects{
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .demo-img{
+    width: 40%;
+    margin-bottom: 10px;
+  }
+  .demo-link{
+    width: 130px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .bxs-chevrons-right{
+    font-size: 10px;
+  }
+
+  /*===============================FOOTER*/
+  .footer{
+    background-color: black;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .title-footer{
+    font-size: 24px;
+    color: aliceblue;
+  }
+  
+  .text-footer{
+    font-size: 16px;
+    color: aliceblue;
+  }
+
+  .pyramid-footer{
+
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: aliceblue;
+    border-radius: 10px;
+  }
+  
+  .copyright{
+    align-self: flex-end;
+  }
+}
 
 @media only screen and (min-width: 1024px){
   *{
@@ -246,7 +432,7 @@
   .menu-content{
     display: none;
     background-color: antiquewhite;
-    padding: 10px;
+    padding-right: 20px;
   }
 
   .button-close{
