starting presentation component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
-body {
+/* body {
   background-image: url(./assets/img/mountain.png), url(./assets/img/no-mountain.png);
   background-repeat: no-repeat;
   background-attachment: scroll, fixed;
 }
 
+ */
