--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,5 @@
-/* body {
-  background-image: url(./assets/img/mountain.png), url(./assets/img/no-mountain.png);
-  background-repeat: no-repeat;
-  background-attachment: scroll, fixed;
+body {
+  background-color: rgb(96 165 250);
 }
 
- */
+
