--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,5 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.darkBlue {
+  background-color: #164675;
+}
+.blue{
+  background-color: #007CA4
+}
+.lightBlue{
+  background-color: #0BB0D8;
+}
+.golden{
+  background-color: #F0A549;
+}
+.yellow{
+  background-color: #FFCE3E;
+}
 
